# Bolt

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml  coverage.yml  cuda.yml
.github_backup/workflows/: ci.yml  cuda.yml
cmake/: BoltConfig.cmake.in  CUDA.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt
include/bolt/: bolt.hpp  constraints.hpp  export.hpp  types.hpp
src/: CMakeLists.txt
src/core/: constraint.hpp  domain.hpp  propagation.hpp  solver.hpp  variable.hpp
src/utils/: config.hpp  logger.hpp  profiler.hpp
tests/: CMakeLists.txt
